Add Java options examples to run on JDK 17